Fix canvas overflow

--- a/frontend/static/styles/index.css
+++ b/frontend/static/styles/index.css
@@ -41,8 +41,8 @@ body {
 
 .Character_name-container {
     position: absolute;
-    top: -12px;
-    left: -5px;
+    top: 0;
+    left: 0;
     font-size: 5px;
     padding: 1px 2px 1px;
     border-radius: 3px;
